A z-index on the map + mobile screen = visual bug with the menu

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -18,7 +18,7 @@ html, body {
     min-width: 200px;
 }
 .fill2{
-    z-index: 5;
+    /*z-index: 5;*/
     background-color: white;
 }
 
